# lightstream

./: .gitignore  Cargo.toml  LICENSE  LICENSE-COMMERCIAL.md  LICENSE.txt  LICENSING.md  README.md  THIRD_PARTY_LICENSES  rustc-ice-2025-08-31T14_31_02-212666.txt
benches/: transport_throughput.rs
examples/: arrow_ipc_basic.rs  csv_basic.rs  lightstream.rs  mmap_zero_copy.rs  parquet_io.rs  table_reader.rs  table_stream_reader.rs  table_stream_writer.rs  test_vec64_alignment.rs  tlv_protocol.rs  write_files.rs
examples/helpers/: mod.rs
examples/quic/: arrow.rs  lightstream.rs
examples/tcp/: arrow.rs  lightstream.rs
examples/uds/: arrow.rs  lightstream.rs
examples/websocket/: arrow.rs  lightstream.rs
examples/webtransport/: arrow.rs  lightstream.rs
flatb/: Message.fbs  NOTES.md  Schema.fbs  SparseTensor.fbs
src/: compression.rs  constants.rs  enums.rs  error.rs  lib.rs  test_helpers.rs  utils.rs
src/arrow/: file.rs  message.rs  schema.rs
src/models/: mmap.rs
src/models/decoders/: csv.rs  parquet.rs  tlv.rs
src/models/decoders/ipc/: parser.rs  protocol.rs  table_stream.rs
src/models/encoders/: csv.rs
src/models/encoders/ipc/: protocol.rs  schema.rs  table_stream.rs
src/models/encoders/parquet/: data.rs  metadata.rs
src/models/encoders/tlv/: protocol.rs  tlv_stream.rs
src/models/frames/: ipc_message.rs  protocol_message.rs  tlv_frame.rs
src/models/protocol/: codec.rs  connection.rs  mod.rs
src/models/readers/: csv_reader.rs  lightstream.rs  parquet_reader.rs  quic.rs  stdio.rs  tcp.rs  uds.rs  websocket.rs  webtransport.rs
src/models/readers/ipc/: file_table_reader.rs  mmap_table_reader.rs  table_reader.rs  table_stream_reader.rs
src/models/sinks/: table_sink.rs  tlv_sink.rs
src/models/streams/: async_read.rs  disk.rs  framed_byte_stream.rs  quic.rs  stdio.rs  tcp.rs  uds.rs  websocket.rs  webtransport.rs
src/models/types/: parquet.rs
src/models/writers/: csv_writer.rs  lightstream.rs  parquet_writer.rs  quic.rs  stdio.rs  tcp.rs  uds.rs  websocket.rs  webtransport.rs
src/models/writers/ipc/: table_stream_writer.rs  table_writer.rs
src/traits/: byte_stream.rs  frame_decoder.rs  frame_encoder.rs  stream_buffer.rs  transport_reader.rs  transport_writer.rs
tests/: ipc_roundtrip.rs  parquet_roundtrip.rs  protocol_roundtrip.rs  pyarrow_roundtrip.rs  quic_roundtrip.rs  stdio_roundtrip.rs  tcp_roundtrip.rs  test_compression_api.rs  test_compression_integration.rs  test_compression_roundtrip.rs  test_mmap_shared_buffers.rs  uds_roundtrip.rs  websocket_roundtrip.rs  webtransport_roundtrip.rs
